--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-sharing": "^10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-hook-form": "^7.36.0",
     "react-native": "0.69.5"
   },
   "devDependencies": {
