--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.4",
     "expo": "~46.0.9",
     "expo-linear-gradient": "~11.4.0",
     "expo-print": "^11.3.0",
